[project]
name = "e621_booru_toolkit (improved fork)"
description = "Nodes: Fetch a specific or random Danbooru/e621/e926/e6ai/Gelbooru/Rule34 image and/or tags etc from a given URL; Get the Wiki entry for a tag through a button press."
version = "0.1.3"
license = { file = "LICENSE" }
dependencies = ["aiohttp", "numpy", "pillow", "requests", "torch"]

[project.urls]
Repository = "https://github.com/Hapseleg/ComfyUI_e621_booru_toolkit"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Hapseleg"
DisplayName = "ComfyUI_e621_booru_toolkit_improved"
Icon = ""
